--- a/portfolio.html
+++ b/portfolio.html
@@ -9,29 +9,41 @@
 </head>
 <body>
     <header>
-      <img src="Icon/Icon - Menu.png" alt="">
+        <nav>
+            <img src="Icon/Icon - Menu.png" alt="">
+        </nav>
     </header>
     <section>
-        <div class="text">
+        <div class="intro">
             <h1>
                 Hey there.<br>
                 I'm Shinn Thant Swam Ye.<br>
-                <span>
-                    I'm a software developer
-                </span>
             </h1>
-            <p>
+            <p class="intro2">
+                I'm a software developer
+            </p>
+            <p class="text">
                 I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hesitate to contact me.
             </p>
         </div>
         <div class="icon">
             <ul class="social">
-                <li><img src="Icon/twitter.svg" alt=""></li>
-                <li><img src="Icon/Linkedin icon.svg" alt=""></li>
-                <li><img src="Icon/medium.svg" alt=""></li>
-                <li><img src="Icon/github.svg" alt=""></li>
-                <li><img src="Icon/angellist.svg" alt=""></li>
+                <li>
+                    <a href=""><img src="Icon/twitter.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="Icon/Linkedin icon.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="Icon/medium.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="Icon/github.svg" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="Icon/angellist.svg" alt=""></a>
+                </li>
             </ul>
         </div>
         <div class="down-arrow">
