--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,14 @@
         <div class="intro">
             <h1>
                 Hey there.<br>
-                I'm Shinn Thant Swam Ye.<br>
+                I'm Pi.<br>
             </h1>
             <p class="intro2">
                 I'm a software developer
             </p>
             <p class="text">
-                I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                I can help you build a product , feature or website Look through some of my work and experience!<br>
+                If you like what you see and have a project you need coded, 
                 don’t hesitate to contact me.
             </p>
         </div>
